# IBA-protocol-lib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
blockchain/: Cargo.toml
blockchain/src/: block.rs  chain.rs  main.rs
chat/: Cargo.toml
chat/src/: main.rs
core/: Cargo.toml
core/interpreter/: Cargo.toml
core/interpreter-test/: Cargo.toml
core/interpreter-test/src/: lib.rs
core/interpreter/src/: lib.rs  parse.rs
core/mempool/: Cargo.toml
core/mempool/src/: lib.rs
core/network/: Cargo.toml
core/network/src/: behaviour.rs  lib.rs  tests.rs
core/network/src/libp2p_impl/: behaviour.rs  handler.rs
core/script/: Cargo.toml
core/script/src/: argument.rs  lib.rs  opcode.rs
core/src/: lib.rs
core/transaction/: Cargo.toml
core/transaction/src/: lib.rs
corelib/: Cargo.toml
iba-core/: Cargo.toml
lib-core/: Cargo.toml
lib-core/src/: lib.rs
network/: Cargo.toml
network/src/: behaviour.rs  handler.rs  lib.rs  test.rs  tests.rs
p2p/: Cargo.toml
p2p/src/: mock.rs  test.rs
src/: lib.rs
src/core/: argument.rs  mod.rs  opcode.rs  script.rs  transaction.rs
