[package]
name = "iba-lib"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "network",
    "bin/dummyd",
]

[dependencies]
parity-scale-codec = { default-features = false, version = "2.2.0", features = ["derive"] }
sha2 = { default-features = false, version = "0.9.6" }

[dev-dependencies]
hex = { version = "0.4.3" }