[package]
name = "network"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.39.1", default-features = false, features = [
    "identify",
    "floodsub",
    "tcp-async-io",
    "noise",
    "mplex",
    "mdns", ]}
async-std = { version = "1.9.0", features = [ "attributes" ] }
futures = { version = "0.3.0" }

[dev-dependencies]
tokio = { version = "1.10.0", features = [ "full", ]}
